--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "Jeff Wang"
-  avatar           : "\assets\images\profilepic.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/profilepic.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Masters Student in Economics at Columbia University. Passionate about Data Science and Machine Learning."
   location         : "New York"
   email            :
