--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Jeff Wang"
 description              : "A deposit of my thoughts and projects"
 url                      : "https://jwangjy.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : jwangjy/jwangjy.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -122,15 +122,15 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/jeffery-jieyang-wang-6155a586/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/Jwangjy"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -275,9 +275,10 @@ defaults:
       type: posts
     values:
       layout: single
-      show_date: true
+      show_date: false
       author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
+      mathjax: true
