--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
    - title: "Posts"
-     url: 
+     url: /posts/
    - title: "About"
      url: /about/
+   - title: "Categories"
+     url: /categories/
    - title: "Tags"
-     url: 
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+     url: /tags/
   # - title: "Sitemap"
   #   url: /sitemap/
